fix: No text wrapping in buttons

--- a/src/css/_toolbar-button.scss
+++ b/src/css/_toolbar-button.scss
@@ -22,6 +22,7 @@
 
   .text {
     @include label-small;
+    white-space: nowrap;
     color: $gray-5;
     display: flex;
     line-height: 16px;
